# life-after-mudd

./: .gcloudignore  .gitignore  .postcssrc.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  app.py  app.yaml  docker-compose.yml  downloader.py  package.json  pyproject.toml  sessions.py  sheets.py  tsconfig.json  web.env
.circleci/: config.yml
scripts/: docker-build-project.bash  docker-build.bash  docker-compose.bash  docker-install-system-dev.bash  docker-install-system.bash  pid1.bash
static/: admin.html  index.html  oauth.html
static/css/: admin.css  index.css
static/js/: admin.js  admin.ts  index.js  main.js  shared.js
static/js/index/: api.js  api.ts  config.js  error.js  geotag.js  main.js  main.tsx  oauth.js  redux.js  redux.ts  state.js  state.ts  tag.js  util.js  util.ts
static/js/index/components/: App.js  App.tsx  Details.js  LoginModal.js  LoginModal.tsx  MapView.js  MapView.tsx  MessageScreen.js  SearchBar.js  SearchBar.tsx  Sidebar.js  Sidebar.module.css  Sidebar.tsx  ViewToggle.js
static/js/index/components/sidebar/: DetailItem.tsx  DetailView.tsx  TwoLevel.tsx
static/js/index/hooks/: redux.ts
static/js/index/lib/: action.ts  response.ts  state.ts
static/js/oauth/: redirect.js  redirect.ts
