[tool.poetry]
name = "life-after-mudd"
version = "0.1.0"
description = ""
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gspread = "^3.1"
oauth2client = "^4.1"
flask = "^1.1"
gunicorn = "^20.0.4"
flask-talisman = "^0.7.0"
google-auth = "^1.11.3"
redis = "^3.4.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pyls-black = "^0.4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
